force-app/main/default/objects/Research_Personnel__c/fields/I_RS_Contact_Researcher__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Contact_Researcher__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related researcher</description>
    <label>Contact/Researcher</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Ethics_Request_Members</relationshipName>
    <type>Lookup</type>
</CustomField>