force-app/main/default/objects/Research_Personnel__c/fields/I_RS_Current_User_Ethics__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Current_User_Ethics__c</fullName>
    <formula>IF( $User.Id =  I_RS_Reseracher_User_Id__c, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current User - Ethics</label>
    <type>Checkbox</type>
</CustomField>