force-app/main/default/objects/Research_Personnel__c/fields/I_RS_Duplicate_Flag__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Duplicate_Flag__c</fullName>
    <description>Returns the number in Research Personnel Counter when End Date is populated. This is used as a duplicate parameter</description>
    <label>Duplicate Flag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>