force-app/main/default/objects/Research_Personnel__c/fields/I_RS_ER_Status__c.field-meta.xml
<CustomField>
    <fullName>I_RS_ER_Status__c</fullName>
    <formula>TEXT (I_RS_Ethics_Request__r.I_RS_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ethics Application Status</label>
    <type>Text</type>
</CustomField>