force-app/main/default/objects/Research_Personnel__c/fields/I_RS_Ethics_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Ethics_Expiry_Date__c</fullName>
    <formula>I_RS_Ethics_Request__r.I_RS_Ethics_Application_Expiry_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>