force-app/main/default/objects/Research_Personnel__c/fields/I_RS_Ethics_Milestone_Status__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Ethics_Milestone_Status__c</fullName>
    <formula>I_RS_Ethics_Request__r.I_RS_Milestone_Task_Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Milestone Status</label>
    <type>Text</type>
</CustomField>