force-app/main/default/objects/Research_Personnel__c/fields/I_RS_Ethics_PI__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Ethics_PI__c</fullName>
    <formula>I_RS_Ethics_Request__r.I_RS_Principal_Investigator_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Principal Investigator</label>
    <type>Text</type>
</CustomField>