force-app/main/default/objects/Research_Personnel__c/fields/I_RS_Ethics_Request__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Ethics_Request__c</fullName>
    <description>Related ethics request</description>
    <label>Ethics Request</label>
    <referenceTo>Ethics_Request__c</referenceTo>
    <relationshipLabel>Ethics Research Personnel</relationshipLabel>
    <relationshipName>Ethics_Request_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>