force-app/main/default/objects/Research_Personnel__c/fields/I_RS_Ethics_Request_ID__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Ethics_Request_ID__c</fullName>
    <label>Ethics Request ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>