force-app/main/default/objects/Research_Personnel__c/fields/I_RS_Ethics_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Ethics_Request_Type__c</fullName>
    <formula>I_RS_Ethics_Request__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ethics Request Type</label>
    <type>Text</type>
</CustomField>