force-app/main/default/objects/Research_Personnel__c/fields/I_RS_Ethics_Review_Outcome__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Ethics_Review_Outcome__c</fullName>
    <formula>TEXT( I_RS_Ethics_Request__r.I_RS_Ethics_Application_Review_Outcome__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ethics Application Review Outcome</label>
    <type>Text</type>
</CustomField>