force-app/main/default/objects/Research_Personnel__c/fields/I_RS_Has_active_PRIME_login__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Has_active_PRIME_login__c</fullName>
    <description>Is true if the Contact/Research has a Related User which is also active</description>
    <formula>I_RS_Contact_Researcher__r.I_RS_Related_User__r.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has active PRIME login</label>
    <type>Checkbox</type>
</CustomField>