force-app/main/default/objects/Research_Personnel__c/fields/I_RS_Organisation__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Organisation__c</fullName>
    <formula>I_RS_Contact_Researcher__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Organisation</label>
    <type>Text</type>
</CustomField>