force-app/main/default/objects/Research_Personnel__c/fields/I_RS_Research_Personnel_Counter__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Research_Personnel_Counter__c</fullName>
    <description>This field is referenced by a duplicate/matching rule</description>
    <displayFormat>{0}</displayFormat>
    <label>Research Personnel Counter</label>
    <type>AutoNumber</type>
</CustomField>