force-app/main/default/objects/Research_Personnel__c/fields/I_RS_Reseracher_User_Id__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Reseracher_User_Id__c</fullName>
    <formula>IF(NOT( ISNULL( I_RS_Contact_Researcher__r.I_RS_Related_User__c ) ), I_RS_Contact_Researcher__r.I_RS_Related_User__c , &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reseracher User Id</label>
    <type>Text</type>
</CustomField>