force-app/main/default/objects/Research_Personnel__c/fields/I_RS_Staff_Sub_Group_Code__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Staff_Sub_Group_Code__c</fullName>
    <formula>I_RS_Contact_Researcher__r.I_RS_Staff_Sub_Group_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Staff Sub Group Code</label>
    <type>Text</type>
</CustomField>