force-app/main/default/objects/Research_Personnel__c/fields/I_RS_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Start_Date__c</fullName>
    <label>Date Added</label>
    <type>Date</type>
</CustomField>