force-app/main/default/objects/Research_Personnel__c/validationRules/End_date_cant_be_a_future_date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_date_cant_be_a_future_date</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK(I_RS_End_Date__c)) &amp;&amp;

I_RS_End_Date__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>I_RS_End_Date__c</errorDisplayField>
    <errorMessage>End Date cannot be a future date</errorMessage>
</ValidationRule>