force-app/main/default/objects/Research_Personnel__c/validationRules/End_Date_greater_to_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_greater_to_Start_Date</fullName>
    <active>true</active>
    <description>End Date cannot be before the Start Date</description>
    <errorConditionFormula>NOT(ISBLANK(I_RS_End_Date__c)) &amp;&amp;
I_RS_End_Date__c &lt;  I_RS_Start_Date__c</errorConditionFormula>
    <errorDisplayField>I_RS_End_Date__c</errorDisplayField>
    <errorMessage>End Date cannot be before Date Added</errorMessage>
</ValidationRule>