force-app/main/default/objects/Research_Personnel__c/listViews/All_Ethics_Request_Members.listView-meta.xml
<ListView>
    <fullName>All_Ethics_Request_Members</fullName>
    <columns>NAME</columns>
    <columns>I_RS_Start_Date__c</columns>
    <columns>Role__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Ethics Request Members</label>
</ListView>